# energy-trading-system

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
config/: settings.py
dashboard/: app.py
data/models/: lightgbm.joblib  xgboost.joblib
src/: backtesting.py  data_pipeline.py  feature_engineering.py  forecasting.py  llm_agent.py  trading_strategy.py
